--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,5 @@
 .navbar {
+  position: fixed;
   overflow: hidden;
   background-color: #131835;
   /* Set the navbar to fixed position */
@@ -44,9 +45,6 @@
 }
 
 footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
   width: 100%;
   background-color: #131835;
   color: white;
@@ -79,16 +77,17 @@ footer li a:hover {
 }
 
 .container{
-  margin:0;
-  padding: 0;
-  max-width:97%;
+ width: 100%;
+ margin:0;
+ padding:0;
+ max-width: 100%;
+ margin-top: 3.75rem;
 }
 
 .bg1{
-  background-image: url("../img/homepage1.jpg");
-  background-size: contain;
-  height:561px;
-  background-repeat: no-repeat;
+  background-image: url("../img/homepage1.jpg");                  /* <------ */
+  background-size:contain;
+  background-repeat:   no-repeat;
 }
 
 .logo{
