--- a/css/accueil.css
+++ b/css/accueil.css
@@ -4,7 +4,9 @@
   background-size:contain;
   background-repeat:   no-repeat;
   background-color: #b4e4e3;
-
+  width: 100%;
+  height: 0;
+  padding-top: 32.03%;
 }
 
 .bg3{
@@ -12,6 +14,9 @@
   url("../img/bloc2.png");
   background-size:contain;
   background-repeat:   no-repeat;
+  width: 100%;
+  height: 0;
+  padding-top: 32.03%;
 }
 
 .bg4{
@@ -19,4 +24,7 @@
   url("../img/bloc3.png");
   background-size:contain;
   background-repeat:   no-repeat;
+  width: 100%;
+  height: 0;
+  padding-top: 32.03%;
 }
