--- a/css/layout.css
+++ b/css/layout.css
@@ -89,6 +89,9 @@ footer li a:hover {
   background-image: url("../img/homepage1.jpg");                  /* <------ */
   background-size:contain;
   background-repeat:   no-repeat;
+  width: 100%;
+  height: 0;
+  padding-top: 29.21%;
 }
 
 .logo{
