--- a/css/layout.css
+++ b/css/layout.css
@@ -54,6 +54,7 @@ footer {
   text-align: center;
   justify-content:center;
   display: flex;
+  margin-top: 5rem;
   padding: 0;
   color: #fff;
 }
