--- a/css/solution.css
+++ b/css/solution.css
@@ -7,6 +7,9 @@
 .divCentre{
 	text-align: justify;
 }
+.divCentre p:last-child{
+	margin-bottom: 5rem;
+}
 .divCentre img{
 	width: 100%;
 	margin-bottom: 2.5rem;
