--- a/css/layout.css
+++ b/css/layout.css
@@ -55,6 +55,7 @@ footer {
   justify-content:center;
   display: flex;
   padding: 0;
+  padding-top: 5rem;
   color: #fff;
   border-top: 2px solid white;
 }
